<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="50dp"
        android:orientation="vertical"
        android:paddingTop="1dp" >

        <LinearLayout
            android:id="@+id/colorBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gCal15">

            <EditText
                android:id="@+id/taskTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:ems="10"
                android:hint="@string/task_name_hint"
                android:paddingTop="10dp"
                android:textColor="@color/White"
                android:textColorHint="@color/WhiteSmoke" />

            <Button
                android:id="@+id/button25"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_tint"
                android:onClick="colorPick" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/datebox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.30"
            android:checked="false"
            android:onClick="dateCheck"
            android:text="Due Date" />

        <Button
            android:id="@+id/dateButton"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:onClick="dateClick"
            android:text="Choose date" />

    </LinearLayout>

    <EditText
        android:id="@+id/taskInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/discription_hint"
        android:inputType="textMultiLine"
        android:paddingTop="10dp" />

</LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" >

        <Button
            android:id="@+id/CancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/card_separator"
            android:text="@string/cancel_button"
            android:onClick="cancel" />

        <ImageView
            android:id="@+id/stripe"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.01"
            android:adjustViewBounds="true"
            android:background="@color/Gray"
            android:baselineAlignBottom="true"
            android:contentDescription="@string/color_stripe"
            android:scaleType="centerCrop" />

        <Button
            android:id="@+id/CreateButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/card_separator"
            android:text="@string/create_button"
            android:onClick="create" />
    </LinearLayout>
    
</RelativeLayout>