<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="3dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/White" >

        <ImageView
            android:id="@+id/DragHandle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/drag_handle" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="15.67"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TaskItemTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/large_text"
                android:textColor="#33B6EA"
                android:textSize="24sp" />
            
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/card_text"
                android:paddingRight="5dp" >
                </RelativeLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/medium_text"
                android:textColor="@color/card_text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/DayNumLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/overflow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/selectable_background_cardbank"
                android:contentDescription="@string/overflow"
                android:padding="2dip"
                android:src="@drawable/ic_menu_moreoverflow_normal_holo_light" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>